new image extra menu contents

--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
         <div class="row" data-aos="fade-up" data-aos-delay="100">
           <div class="col-lg-12 d-flex justify-content-center">
             <ul id="menu-flters">
-              <li data-filter="*" class="filter-active">All</li>
+              <!-- <li data-filter="*" class="filter-active">All</li>-->
               <li data-filter=".filter-starters">Starters</li>
               <li data-filter=".filter-salads">Salads</li>
               <li data-filter=".filter-specialty">Specialty</li>
@@ -471,9 +471,9 @@
               <div class="tab-pane active show" id="tab-1">
                 <div class="row">
                   <div class="col-lg-8 details order-2 order-lg-1">
-                    <h3>Architecto ut aperiam autem id</h3>
-                    <p class="fst-italic">Qui laudantium consequatur laborum sit qui ad sapiente dila parde sonata raqer a videna mareta paulona marka</p>
-                    <p>Et nobis maiores eius. Voluptatibus ut enim blanditiis atque harum sint. Laborum eos ipsum ipsa odit magni. Incidunt hic ut molestiae aut qui. Est repellat minima eveniet eius et quis magni nihil. Consequatur dolorem quaerat quos qui similique accusamus nostrum rem vero</p>
+                    <h3>A japán tésztaleves</h3>
+                    <p class="fst-italic">A méltán közkedvelt japán tésztaleves melegen ajánljuk minden kedves vendégünknek</p>
+                    <p>A ramen lényegében a tésztát jelölii, amely hasonló az udonhoz (lejjebb), de a köznyelvben ha erről beszélünk, akkor magát a levest is hívhatjuk így, amely egy sós alaplevet takar, benne sok esetben sertéshússal, újhagymával, tojással, és persze a névben is említett tésztával. Az alapja négyfajta lehet: sertéshúsos, misos, szójás, vagy sós.</p>
                   </div>
                   <div class="col-lg-4 text-center order-1 order-lg-2">
                     <img src="assets/img/ramen2.png" alt="" class="img-fluid">
@@ -483,12 +483,12 @@
               <div class="tab-pane" id="tab-2">
                 <div class="row">
                   <div class="col-lg-8 details order-2 order-lg-1">
-                    <h3>Et blanditiis nemo veritatis excepturi</h3>
-                    <p class="fst-italic">Qui laudantium consequatur laborum sit qui ad sapiente dila parde sonata raqer a videna mareta paulona marka</p>
-                    <p>Ea ipsum voluptatem consequatur quis est. Illum error ullam omnis quia et reiciendis sunt sunt est. Non aliquid repellendus itaque accusamus eius et velit ipsa voluptates. Optio nesciunt eaque beatae accusamus lerode pakto madirna desera vafle de nideran pal</p>
+                    <h3>Japán Curry</h3>
+                    <p class="fst-italic">A japán currzt általában három fő formában szolgálják fel: curry rizs ( curry rizs fölött), curry udon (curry tészta fölött) és curry kenyér (curryvel töltött tészta) . Ez az egyik legnépszerűbb étel Japánban. A nagyon elterjedt "curry rizst" leggyakrabban csak "curry"-nek nevezik.</p>
+                    <p>A mártással együtt sokféle zöldséget és húst használnak a japán curry elkészítéséhez. Az alapvető zöldségek a hagyma, a sárgarépa és a burgonya. A marhahús, a sertéshús és a csirke a legnépszerűbb húsválaszték. A Katsu-curry egy rántott rántott szelet (általában sertés vagy csirke) japán curry szósszal.</p>
                   </div>
                   <div class="col-lg-4 text-center order-1 order-lg-2">
-                    <img src="assets/img/specials-2.png" alt="" class="img-fluid">
+                    <img src="assets/img/katsu_chicken.png" alt="" class="img-fluid">
                   </div>
                 </div>
               </div>
